# htmxsample

./: pyproject.toml
step6/: main.py  pyproject.toml  tailwind.config.js
step6/controller/: author.py  author_mako.py  book.py
step6/model/: author.py  book.py
step6/static-files/: input.css  output.css  site._hs  site.css  site.js
step6/templates/: author.delete.mako.html  author.edit-row.mako.html  author.edit.mako.html  author.index.data.mako.html  author.index.mako.html  author.index.row.mako.html  base.mako.html  book.data.mako.html  hello.mako.html  index.mako.html  index.mako.html.org  modal.mako.html  script.mako.html
